# structural_exhaustion

./: .gitignore  CORE_STRATEGY_PROPOSALS.md  DOMAIN_INDEPENDENT_CORE.md  EG_CHAPTER1_STRATEGY_TRANSLATION_PLAN.md  EG_COLD_BRANCH_NODE_FILES_GAP_MAP.md  EG_STRATEGY_DAG_SPEC.md  ERDOS_64_COLD_CORRIDOR_CONGESTION_ERROR.md  ERDOS_64_NODES_25_26_OBLIGATION_LEDGER.md  ERDOS_64_NODES_85_128_OBLIGATION_LEDGER.md  ERDOS_64_NODE_144_OBLIGATION_LEDGER.md  ERDOS_64_NODE_144_SEMANTIC_PRODUCER_GAP.md  ERDOS_64_NODE_147_OBLIGATION_LEDGER.md  ERDOS_64_NODE_150_OBLIGATION_LEDGER.md  ERDOS_64_NODE_153_F5_COLD_BOUNDED_GERM_MISSING_PRODUCER.md  ERDOS_64_NODE_153_PRODUCED_SUPPORT_LEDGER_GAP.md  ERDOS_64_NODE_23_OBLIGATION_LEDGER.md  ERDOS_64_NODE_24_OBLIGATION_LEDGER.md  ERDOS_64_NODE_84_GLOBAL_REALIZATION_GAP.md  ERDOS_64_ORIGINAL_FLOW_ERRORS.md  ERDOS_64_PART_IV_ORIGINAL_FLOW_BLOCKER.md  ERDOS_64_PART_XI_OBLIGATION_LEDGER.md  ERDOS_64_TYPEA_NODES_95_108_FORMALIZATION_GAP.md  ERDOS_64_TYPE_B_NODES_65_74_MISSING_PRODUCERS.md  ERDOS_NODE54_BLOCKER.md  GRAPH_LAYER_API.md  HYPOSTRUCTURE_MIGRATION_GUIDE.md  Makefile  NODE54_BLOCKER.md  NS2D_ROW1_12_AUTOMATION_DESIGN.md  PDE_LAYER_API.md  README.md  SHA256SUMS  erdos_64_proof.aux  erdos_64_proof.fdb_latexmk  erdos_64_proof.fls  erdos_64_proof.toc  original_erdos_64_proof.tex  pyproject.toml  requirements.txt
.codex/: config.toml
PDEs/: 10_continuous_extension.ipynb  llm_auditable_proof_architecture_draft.tex  ns_perelman.tex  overall_proof_architecture.tex  paperIV_residual_branch.tex  proof_setup.tex  type_II_regularity.tex
lean/: README.md  (+3 more)
(+4366 files in other folders)
