[project]
name = "structural-exhaustion"
version = "0.1.0"
description = "Automation-first Lean proof artifacts, migration tooling, and web documentation for Structural Exhaustion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1,<4",
  "gunicorn>=23,<24",
  "jsonschema>=4.22,<5",
  "pydantic>=2.11,<3",
  "pytest>=8,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
